Fix CORS for Vercel production